# WhisperLive

./: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.project  LICENSE  OpenVINO.md  README.md  README_WhisperLive.md  ROCm_whisper.md  SECURITY.md  TensorRT_whisper.md  client.py  client_oldapi.py  client_openai.py  docker-compose.yml  entrypoint.sh  example-start_client-faster_whisper.py  example-start_client-openvino.py  example-start_server-faster_whisper.py  example-start_server-openvino.py  main.py  mini_client.py  output.srt  pyproject.toml  requirements.txt  run_client.py  run_server.py  run_server.service  server.py  server_latency.csv  setup.py  setup.sh  start_client.py  start_client_rust.py  start_server.py  test_mlx_microphone.py  transcriber.py  transcript.srt  transcript.txt  verify_mlx_gpu.py  (+2 more)
.devcontainer/: devcontainer.json
Audio-Transcription/: LICENSE  README.md  background.html  background.js  complete.css  complete.html  complete.js  content.js  error.css  error.html  manifest.json  options.css  options.html  options.js  ort.min.js  popup.css  popup.html  popup.js  style.css  worker.js
Audio-Transcription-Chrome/: README.md  audiopreprocessor.js  background.js  content.js  manifest.json  options.html  options.js  package.json  popup.html  popup.js  style.css  test.py
Audio-Transcription-Firefox/: README.md  audiopreprocessor.js  background.js  content.js  manifest.json  popup.html  popup.js  style.css
Audio-Transcription-iOS/: AudioStream.swift  AudioWebSocket.swift  ContentView.swift  README.md  RecordingViewModel.swift  WhisperLive-iOS-Client-Info.plist  WhisperLive_iOS_ClientApp.swift
assets/: jfk_3s.flac
deploy/: LOCAL_STAGING.md  docker-compose.local.yml  ecr-push.sh  ecs-deploy.sh  ecs-task-definition.json  prometheus.yml
docker/: Dockerfile.cpu  Dockerfile.dev  Dockerfile.edge  Dockerfile.gpu  Dockerfile.jetson  Dockerfile.openai  Dockerfile.openvino  Dockerfile.rocm  Dockerfile.tensorrt  Dockerfile.vulkan
docs/: EDGE_DEPLOYMENT.md  FINE_TUNING.md  KEYCLOAK_SSO.md  SCALING.md  USER_MANAGEMENT.md  aws-commercial-deployment.md
examples/: example_client.py  manual_audio_chunking.py
pulumi/: Pulumi.yaml  README.md  __main__.py
requirements/: client.txt  server.txt
scripts/: build_whisper_tensorrt.sh  finetune_whisper.py  install_tensorrt_llm.sh  prepare_finetune_data.py  setup.sh
sdks/: README.md
tests/: test_acl.py  test_audio_intelligence.py  test_aws_deployment.py  test_base_backend.py  test_batch_inference.py  test_client.py  test_client_extended.py  test_diarization.py  test_ensemble.py  test_formatting.py  test_highlights_extras.py  test_known_speakers.py  test_language_detection.py  test_metrics.py  test_model_cache.py  test_multichannel.py  test_noise_reduction.py  test_openapi_docs.py  test_pii_redaction.py  test_plugins.py  test_profanity_filter.py  test_search.py  test_server.py  test_server_extended.py  test_streaming_client.py  test_translation_relay.py  test_utils.py  test_utterance.py  test_vad.py  test_vad_extended.py  test_web_ui.py
web/: index.html
web_live/: README.md  nginx_config.conf  whisperlive_client.html
whisper-finetuning/: requirements.txt  train.py
whisper_live/: __init__.py  __version__.py  acl.py  audio_intelligence.py  batch_inference.py  client.py  config.py  (+24 more)
whisper_live.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+48 files in other folders)
